# async-inspect

./: .dockerignore  .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOC.md  Dockerfile  ECOSYSTEM_INTEGRATION.md  PROGRESS.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  VSCODE_EXTENSION_SUMMARY.md  async_inspect_report.html  ecosystem_trace.json  performance_analysis_report.html  proc_macro_test_report.html  production_events.csv  production_tasks.csv  task_hierarchy_report.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
async-inspect-macros/: Cargo.toml
async-inspect-macros/src/: lib.rs
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/content/: async-stack-traces.md  async-state-machines.md  cli-usage.md  examples.md  installation.md  intro.md  production.md  quickstart.md  troubleshooting.md
docs/content/integrations/: opentelemetry.md  prometheus.md  tracing.md
docs/src/pages/: index.tsx
examples/: basic_inspection.rs  deadlock_detection.rs  ecosystem_integration.rs  performance_analysis.rs  proc_macro_test.rs  production_ready.rs  relationship_graph.rs  simple_test.rs  task_hierarchy.rs  tokio_integration.rs  tui_monitor.rs  visualization.rs
src/: config.rs  export.rs  graph.rs  lib.rs  main.rs
src/deadlock/: mod.rs
src/inspector/: mod.rs
src/instrument/: mod.rs
src/integrations/: mod.rs  opentelemetry.rs  prometheus.rs  tokio_console.rs  tracing_layer.rs
src/profile/: mod.rs  reporter.rs
src/reporter/: html.rs  mod.rs
src/runtime/: mod.rs  tokio.rs
src/task/: mod.rs
src/timeline/: mod.rs
src/tui/: mod.rs
vscode-extension/: CHANGELOG.md  README.md  async-inspect-0.1.0.vsix  package-lock.json  package.json
vscode-extension/src/: asyncInspectManager.ts  extension.ts
vscode-extension/src/providers/: codeLensProvider.ts  deadlocksViewProvider.ts  statsViewProvider.ts  taskTreeProvider.ts
vscode-extension/src/webviews/: graphPanel.ts  timelinePanel.ts
