[package]
name = "async-inspect"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "X-ray vision for async Rust - inspect and debug async state machines"
homepage = "https://github.com/yourusername/async-inspect"
repository = "https://github.com/yourusername/async-inspect"
documentation = "https://docs.rs/async-inspect"
keywords = ["async", "debugging", "inspection", "state-machine", "tokio"]
categories = ["asynchronous", "development-tools::debugging"]
readme = "README.md"

[lib]
name = "async_inspect"
path = "src/lib.rs"

[[bin]]
name = "async-inspect"
path = "src/main.rs"

[dependencies]
# Core async
futures = "0.3"
pin-project = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI (optional)
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokio integration (optional)
tokio = { version = "1.35", features = [
    "rt",
    "macros",
    "sync",
], optional = true }

# Tracing integration
tracing = "0.1"
tracing-subscriber = "0.3"

# Time tracking
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["cli", "tokio"]

# CLI with TUI
cli = ["ratatui", "crossterm"]

# Runtime support
tokio = ["dep:tokio"]

# All features
full = ["cli", "tokio"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[example]]
name = "basic_inspection"
path = "examples/basic_inspection.rs"

[[example]]
name = "deadlock_detection"
path = "examples/deadlock_detection.rs"

[[example]]
name = "performance_analysis"
path = "examples/performance_analysis.rs"
